# game

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  config.yaml  cube_graphic.h  debug.h  engine.cpp  engine.h  game.kdev4  game_graphic.cpp  game_graphic.h  game_logic.cpp  game_logic.h  game_object.cpp  game_object.h  input_event.h  input_notifier.cpp  input_notifier.h  lights.h  logger.h  main.cpp  many_models.cpp  material.h  maze_generator.cpp  maze_generator.h  menu.cpp  menu.h  model.cpp  model.h  mouse_event.h  mouse_notifier.cpp  mouse_notifier.h  notifier.h  object_view.cpp  object_view.h  player_logic.cpp  player_logic.h  printf.h  shader.cpp  (+18 more)
.kdev4/: game.kdev4
audio_converter/: ogg.sh  wav.sh
cmake/Modules/: Findassimp.cmake
models/: E_45_Aircraft_obj.mtl  cube.mtl  cube1.mtl  cube2.mtl  cube3.mtl  cube4.mtl  cube_modelled.blend  cube_textured.blend  cube_textured.blend1  cube_textured.mtl  eyeball.mtl  finish_cube.mtl  model_cube.mtl  plane.blend  plane.blend1  plane.mtl  plane_flipped4.blend  start_cube.mtl  vm.mtl  wall.blend  wall.blend1  wall.mtl
shaders/: biblio.bib  cascade_depth.frag  cascade_depth.vert  cascade_fragment.frag  cascade_shadow.frag  cascade_shadow.vert  cascade_shadow_notext.frag  cascade_shadow_notext.vert  cascade_vertex.vert  depth_fragment.frag  depth_vertex.vert  fragment.frag  light_vertex.vert  material_fragment.frag  material_vertex.vert  skybox_fragment.frag  skybox_vertex.vert  test_depth.frag  test_depth.vert  vertex.vert
src/: clock.h  dynamic_enemy_logic.cpp  dynamic_enemy_logic.h  engine.cpp  engine.h  game_graphic.h  game_logic.cpp  game_object.cpp  game_object.h  game_state.h  gl_headers.h  input_notifier.cpp  listener.h  main.cpp  maze_generator.cpp  maze_generator.h  menu.cpp  menu.h  mouse_notifier.h  platform.h  player_logic.cpp  player_logic.h  printf.cpp  random.cpp  random.h  shadow.cpp  shadow.h  singleton.h  skybox.cpp  utils.h  window.cpp  window.h
src/audio/: player.cpp  player.h
src/models/: material.h  object.cpp  object.h  texture.cpp  texture.h
textures/: Eye_D.jpg.bak  cube1.tga  cube1_top.tga  cube2.tga  cube2_top.tga  cube3.tga  cube3_top.tga  cube4.tga  cube4_top.tga  finish_cube.tga  finish_cube_top.tga  start_cube.tga  start_cube_top.tga
textures/envmap_violentdays/: violentdays_bk.tga  violentdays_dn.tga  violentdays_ft.tga  violentdays_lf.tga  violentdays_rt.tga  violentdays_up.tga  violentdays_up.xcf
